2009.06.08 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.c:
	  - FrameFiller_nextMQR() has integrated to FrameFiller_next().
	  - FrameFiller_new() now requires mqr flag.

2009.06.06 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c, tests/view_qrcode.c:
	  - Experimental support of Micro QR Code has been implemented.
	* qrencode.[ch]:
	  - QRinput_setVersionAndErrorCorrectionLevel() has been added.
	* tests/common.h, tests/test_split.c:
	  - Code cleanups.
	  - printFrame() and printQRcode() have been added.
	* tests/test_qrencode.c:
	  - Some tests have been added.
	* qrspec.h, mqrspec.h, qrencode.h:
	  - Definitions of {MQR,QR}SPEC_VERSION_MAX are moved to qrencode.h.
	* qrinput.c, qrencode.h, tests/test_qrencode.c:
	  - Size check has been removed from QRinput_convertData() for MQR.
	  - QRinput_convertData() throws ERANGE when the input is too large.
	  - QRinput_appendPadding*() throws ERANGE when the input is too large.
	  - As a result, QRencode_encodeString*() throws ERANGE in that cases.
	  - Some assertion checks of errno added to test_qrencode.
	* Bumped vertion to 3.9.0.
	  - Next public release will be 4.0.0.

2009.06.06 Kentaro FUKUCHI <fukuchi@megaui.net>
	[3.1.0]
	* Version 3.1.0 has been released.

2009.06.05 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.h, qrencode_inner.h, tests/test_qrencode.c:
	  - FrameFiller_next() has improved.
	  - FrameFiller_nextMQR() has been added.
	  - FrameFiller_test() FrameFiller_testMQR() have been added.
	  - Tests of FrameFiller added and improved.

2009.06.04 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Makefile.am:
	  - Dependency check was incorrect because of misconfiguration.
	* mask.c, mmask.c:
	  - Error check has been added to {Mask,MMask}_makeMask().
	* mqrspec.[ch], qrinput.c:
	  - MQRspec_getDataLength() now returns in byte.
	  - MQRspec_getDataLengthBit() returns in bit instead.
	* qrencode.[ch], qrencode_inner.h:
	  - QRencode_encodeStringMQR() and its 8bit version are added.